oinc/manifests/rhdh-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhdh
